--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Tartiflette",
   "license": "ISC"
 }
+
