--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "node": "^14.16.1",
     "discord.js": "^12.5.3",
     "nodemon": "^2.0.7",
     "wokcommands": "github:AlexzanderFlores/WOKCommands#dev"
