--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "node": "^14.16.1",
+    "node": "14.16.1",
     "discord.js": "^12.5.3",
     "nodemon": "^2.0.7",
     "wokcommands": "github:AlexzanderFlores/WOKCommands#dev"
@@ -8,6 +8,9 @@
   "name": "botiflette",
   "version": "1.0.0",
   "description": "Pas besoin de description :sunglasses:",
+  "engines": {
+    "node": "14.16.1"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
