--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "dependencies": {
-    "node": "14.16.1",
-    "discord.js": "^12.5.3",
-    "nodemon": "^2.0.7",
-    "wokcommands": "github:AlexzanderFlores/WOKCommands#dev"
-  },
   "name": "botiflette",
   "version": "1.0.0",
-  "description": "Pas besoin de description :sunglasses:",
-  "engines": {
-    "node": "14.16.1",
-    "pwn": "6.14.12"
-  },
+  "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tartifletteuhh/BOTiflette.git"
+  },
   "author": "Tartiflette",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tartifletteuhh/BOTiflette/issues"
+  },
+  "homepage": "https://github.com/Tartifletteuhh/BOTiflette#readme",
+  "dependencies": {
+    "discord.js": "^12.5.3",
+    "wokcommands": "^1.3.5"
+  }
 }
