--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Tartifletteuhh/BOTiflette#readme",
   "dependencies": {
+    "@blagues-api/blaguesapi": "^1.1.0",
     "discord.js": "^12.5.3",
+    "requests": "^0.3.0",
     "wokcommands": "^1.3.5"
   }
 }
