--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@blagues-api/blaguesapi": "^1.1.0",
     "discord.js": "^12.5.3",
+    "mongoose": "^5.12.11",
+    "nodemon": "^2.0.7",
     "requests": "^0.3.0",
     "wokcommands": "^1.3.5"
   }
